--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-native-web": "~0.18.10",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
-    "react-navigation-tabs": "^2.11.2"
+    "react-navigation-tabs": "^2.11.2",
+    "@types/react": "~18.0.27",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
